<resources>
    <string name="app_name">Acoustics measurement</string>
    <string name="experiment">扬声器频率响应测量</string>
    <string name="noise_measurement">噪声波测量与分析</string>
    <string name="ear_test">听力测量</string>
    <string name="skip">跳过</string>
    <string name="left_ear">左耳</string>
    <string name="right_ear">右耳</string>
    <string name="able_hear">听得到</string>
    <string name="unable_hear">听不到</string>
    <string name="guidance">请将麦克风置于扬声器的正上方一定距离（根据扬声器口径而定，一般大于扬声器直径的3倍，但不宜过大），点击下方“开始实验”按钮播放测试信号，系统接收测试信号处理后将显示扬声器系统的频率响应。</string>
    <string name="adjust">校准</string>
    <string name="noise_measure">噪声测量</string>
    <string name="test_signal">测试信号</string>
    <string name="inverse_signal">卷积逆信号</string>
    <string name="adjust_tip">请将专用传声器插入%sdB的校准筒，待示数稳定后，按下校准按钮，或调节下方数字选择器</string>
    <string name="convolution_wave">卷积波形</string>
    <string name="phase_chart">相位谱</string>
    <string name="frequency_chart">振幅谱</string>
    <string name="power_chart">频率响应</string>
    <string name="experiment_error">实验出错</string>
    <string name="real_time_db">实时值 = %s</string>
    <string name="max_db">最大值 = %s</string>
    <string name="min_db">最小值 = %s</string>
    <string name="baseline">基准值</string>
    <string name="sharedpreferences">edu.scut.acoustics.PREFERENCE</string>
    <string name="you_refuse_authorize">你拒绝提供权限</string>
    <string name="start_to_play">开始播放音频</string>
    <string name="start_to_process">放音结束，开始处理数据</string>
    <string name="earphone_info">请先插入耳机</string>
    <string name="hzbtn">%dHz</string>
    <string name="currentdb">当前分贝\n%ddb</string>
    <string name="currentfreq">当前频率\n%dHz</string>
    <string name="test_result">测试结果</string>
    <string name="refresh">刷新</string>
    <string name="ear_test_result">双耳听阈测量</string>
    <string name="self_determine">自定义分贝值</string>
    <string name="dBA">%sdBA</string>
    <string name="dBC">%sdBC</string>
    <string name="dBZ">%sdBZ</string>
    <string name="frequency_dbUnit">%1$dHz = %2$s</string>
    <string name="env_normal">环境音量正常，开始测试</string>
    <string name="env_loud">环境音量过大</string>
    <string name="insist">坚持要测</string>
    <string name="experiment_description">测量麦克风和扬声器的频率响应</string>
    <string name="noise_measurement_description">多种计权的倍频带噪声声压级测量</string>
    <string name="ear_test_description">测量双耳的倍频带的听阈</string>
    <string name="a_weighting">A计权</string>
    <string name="c_weighting">C计权</string>
    <string name="z_weighting">Z计权</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="quit">退出</string>
    <string name="bandwidth">正负10dB带宽: %1$sHz - %2$sHz</string>
    <string name="comparison_adjust">对比校准</string>
    <string name="calibrator_adjust">校准器校准</string>
</resources>