<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ear_navigation"
    app:startDestination="@+id/left_ear">

    <fragment
        android:id="@+id/left_ear"
        android:name="edu.scut.acoustics.ui.ear_test.LeftEarFragment"
        android:label="@string/left_ear"
        tools:layout="@layout/fragment_left_ear">
        <action
            android:id="@+id/left_to_right"
            app:destination="@id/right_ear" />
        <action
            android:id="@+id/left_to_result"
            app:destination="@id/test_result" />
    </fragment>

    <fragment
        android:id="@+id/right_ear"
        android:name="edu.scut.acoustics.ui.ear_test.RightEarFragment"
        android:label="@string/right_ear"
        tools:layout="@layout/fragment_right_ear">
        <action
            android:id="@+id/right_to_left"
            app:destination="@id/left_ear" />
        <action
            android:id="@+id/right_to_result"
            app:destination="@id/test_result" />
    </fragment>

    <fragment
        android:id="@+id/test_result"
        android:name="edu.scut.acoustics.ui.ear_test.TestResultFragment"
        android:label="@string/test_result"
        tools:layout="@layout/fragment_test_result"></fragment>

</navigation>